# hyperion

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  backlog.md  checklist.md  deny.toml  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: ci.yml
docs/adr/: 0001-photon-optical-interaction-boundary.md
examples/: photon_transport.rs
src/: error.rs  lib.rs  validation.rs
src/coefficient/: interaction.rs  mass.rs  mod.rs  optical.rs  role.rs
src/quantity/: anisotropy.rs  dimensionless.rs  fluence.rs  mod.rs  path.rs
src/reference/: mod.rs  nist.rs  nist_data.rs
src/transport/: beer_lambert.rs  diffusion.rs  mod.rs
tests/: contracts.rs
tests/contracts/: layout_and_allocation.rs  nist_reference.rs  transport_theorems.rs  validation.rs
tests/contracts/support/: mod.rs
