[package]
name = "hyperion"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
description = "Atlas photon and optical interaction-law foundation"
repository = "https://github.com/ryancinsight/hyperion"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["photon", "optics", "attenuation", "multiphysics"]
categories = ["no-std", "science"]
publish = false

[dependencies]
aequitas = { version = "0.1.0", git = "https://github.com/ryancinsight/aequitas", rev = "767e2d0550f1dc15bd8c4434a1a1002806f93498", default-features = false }
eunomia = { version = "0.7.0", git = "https://github.com/ryancinsight/eunomia", rev = "7021628fe8eb3637c297105f626ee5df78abda84", default-features = false }
proteus = { version = "0.1.0", git = "https://github.com/ryancinsight/proteus", rev = "83734a2af355ad34c48983334ec87454f867fa49", default-features = false }

[dev-dependencies]
proptest = "1.11.0"
stats_alloc = "0.1.10"

[features]
default = ["std"]
std = ["aequitas/std", "eunomia/std", "proteus/std"]

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.dev]
debug = "line-tables-only"
overflow-checks = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
overflow-checks = true

[profile.release]
debug = false
strip = "symbols"
overflow-checks = true
